fmi3 upgrades. Now modifications can be made in scopes prior to expansion point, unified status variables, handling of time based clock initialization